# I-like-Chopin

./: .README.md.kate-swp  .env  .pylintrc  ILC.gv  ILC.sh  README.md  i-like-chopin.bat  i-like-chopin.sh  i-like-chopin.sh.sample  install.sh  raspberry-pi.txt
chopin-lab/: .gitignore  chopin-lab.json  chopin-lab.py  chopin-lab.pyproject  form.ui  informations.py  informations.ui  mainwindow.py  mainwindow.ui  midi_file.py  midi_input.py  midi_main.py  midi_numbers.py  midi_output.py  requirements.txt  settings.py  ui_form.py  ui_informations.py  ui_mainwindow.py
desktop/: org.obook.i-like-chopin.desktop
installation/: Windows.txt  install.sh  uninstall.sh
manager/: .gitignore  (+3 more)
src/: .gitignore  _mainwindow_init.py  _mainwindow_menu.py  _mainwindow_midi.py  _mainwindow_signals.py  _mainwindow_timers.py  _mainwindow_web.py  _mainwindow_webbrowser.py  big_screen.py  big_screen.ui  chopin-lab.pyproject  dummy_piano_player.pyproject  form.ui  history.py  i-like-chopin.json  i-like-chopin.py  i-like-chopin.pyproject  informations.py  informations.ui  informations_dialog.py  logger.py  mainwindow.py  mainwindow.ui  midi_controller.py  midi_file.py  midi_files.py  midi_input.py  midi_keyboard.py  midi_main.py  midi_modes.py  midi_numbers.py  midi_output.py  midi_passthrough.py  midi_player.py  midi_reader.py  midi_song.py  midi_states.py  midimain.py  playlist.py  pyproject.toml  (+18 more)
src/icons/: source.txt
src/midi/: licence.txt
src/midi/CHOPIN/: licences.txt
src/template/: index-template.html  status.json
src/ui/: README.txt  files - linux.json  files.json  index-bootstrap.html  index.css  index.html  index.js  interfaces.json  status.json
(+65 files in other folders)
