[tool.poetry]
name = "i-like-chopin"
version = "1.0.8"
description = "Funny ALSA MIDI playback player for play like Chopin"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
extension-pkg-whitelist = ["PySide6"]
