[tool.poetry]
name = "i-like-chopin"
version = "2.0.3"
description = "Funny MIDI playback player for play like Chopin"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
pyside6 = "^6.7.2"
requests = "^2.32.3"
netifaces2 = "^0.0.22"
qrcode = {extras = ["pil"], version = "^7.4.2"}
bottle = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
extension-pkg-whitelist = ["PySide6"]
