[project]
name = "i-like-chopin"
version = "2.0.3"
description = "Funny MIDI playback player for play like Chopin"
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "mido>=1.3.2,<2",
    "python-rtmidi>=1.5.8,<2",
    "pyside6>=6.7.2,<7",
    "requests>=2.32.3,<3",
    "netifaces2>=0.0.22,<0.0.23",
    "qrcode[pil]>=7.4.2,<8",
    "bottle>=0.13.2,<0.14",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
extension-pkg-whitelist = ["PySide6"]
